# gameengine

./: .gitignore  CMakeLists.txt  Makefile  README.md
libs/sol/: config.hpp  forward.hpp  sol.hpp
src/: Game.cpp  Game.h  Logger.cpp  Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: RigidBodyComponent.h  SpriteComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: MovementSystem.h  RenderSystem.h
src/asset_store/: asset_store.cpp  asset_store.h
src/components/: animation_component.h  box_collider_component.h  rigid_body_component.h  sprite_component.h  transform_component.h
src/ecs/: ecs.h
src/game/: game.cpp
src/logger/: logger.cpp
src/systems/: animation_system.h  collision_system.h  debug_render_system.h  movement_system.h  render_system.h
